k8s/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tfd-blog-service
  namespace: prod
  labels:
    app: tfd-blog
    environment: prod
spec:
  type: ClusterIP
  selector:
    app: tfd-blog
    environment: prod
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
  sessionAffinity: None
